kustomize-units/firewall/common/to-kubernetes-svc-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: to-kubernetes-policy
spec:
  selector: component == 'kube-apiserver'
  order: 50
  types:
    - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: has(kubernetes.io/hostname)
    destination:
      ports:
      - 443 # kube-apiserver
      - 666
